<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".ui.fragment.OtpVerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/message"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/enter_the_otp_sent_to"
            android:textSize="14sp"
            android:textColor="@color/colorTextSecondary"/>

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LevelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_t_receive_the_code"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary"
                />

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:layout_marginStart="8dp"
                android:textColor="@color/deepOrange"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/verify"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>


</ScrollView>